# mynotes

./: .gitignore  README.md  pyproject.toml
docs/: databricks.txt  pyspark.txt
docs/link-harvester/: .gitignore  README.md  pyproject.toml
docs/link-harvester/src/link_harvester/: main.py
mn_cpp/: .gitignore  README.md
mn_cpp/0-hackerank/: 1-types.cpp  10-attribute-parser.cpp  11-strings.cpp  12-struct.cpp  13-class.cpp  15-box-it.cpp  16-operator-overload.cpp  17-error-handling.cpp  18-rectangle-area.cpp  19-templates.cpp  1a-types.cpp  2-conditionals.cpp  20-virtual-functions.cpp  21-attending-workshops.cpp  22-getline.cpp  3-forloop.cpp  4-functions.cpp  5-pointer.cpp  6-arrays.cpp  6a-unknown-input-number.cpp  7-variable-arrays.cpp  8-lower-bound-stl.cpp  9-strings-stream.cpp  9a-strings.cpp  9b-string-stream.cpp
mn_cpp/00-interview/: 1-pid.cpp
mn_cpp/1-variables/: main.cpp
mn_cpp/10-class-templates/: main.cpp
mn_cpp/12-strings/: main.cpp
mn_cpp/13-arrow-operator/: main.cpp
mn_cpp/14-destructors/: main.cpp
mn_cpp/15-static/: main.cpp
mn_cpp/16-instances/: main.cpp
mn_cpp/17-class-structs/: main.cpp
mn_cpp/18-arrays/: main.cpp
mn_cpp/19-const/: main.cpp
mn_cpp/2-functions/: main.cpp
mn_cpp/20-loops/: main.cpp
mn_cpp/21-implicit-conversion/: main.cpp
mn_cpp/22-mutable/: main.cpp
mn_cpp/23-interfaces/: main.cpp
mn_cpp/24-virtual-destructors/: main.cpp
mn_cpp/25-auto/: main.cpp
mn_cpp/26-templates/: main.cpp
mn_cpp/27-dynamic-casting/: main.cpp
mn_cpp/28-casting/: main.cpp
mn_cpp/29-smart-pointers/: main.cpp
mn_cpp/3-headers/: log.cpp  main.cpp
mn_cpp/30-lambdas/: main.cpp
mn_cpp/31-function-pointers/: main.cpp
mn_cpp/33-multiple-return/: main.cpp
mn_cpp/34-dynamic-arrays/: main.cpp
mn_cpp/35-static-arrays/: main.cpp
mn_cpp/37-copy-constructors/: main.cpp
mn_cpp/38-vector/: main.cpp
mn_cpp/39-inline-functions/: main.cpp
mn_cpp/4-references/: main.cpp
mn_cpp/5-pointers/: main.cpp
mn_cpp/6-operator-overloading/: main.cpp
mn_cpp/7-virtual-functions/: main.cpp
mn_cpp/cmake/1b-library/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
mn_cpp/cmake/2e-modules/: CMakeLists.txt
mn_cpp/cmake/2e-modules/cmake/Modules/:  FindXQilla.cmake
mn_cuda/: README.md
mn_julia/: Lorentz.ipynb  lorentz.jl
mn_rust/: README.md
mn_rust/big_picture/: Cargo.toml  README.md
mn_rust/big_picture/src/: README.md  sum.rs  sum_concurrent.rs  sum_oop_borrow.rs  sum_queue.rs  try_borrow.rs
notebooks/: VAE.ipynb
(+59 files in other folders)
