[project]
name = "link-harvester"
version = "0.1.0"
description = "A CLI tool to crawl websites and extract links."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advertools>=0.17.1",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
harvester = "link_harvester.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"