[package]
name = "bigpic"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "sum"
path = "src/sum.rs"

[[bin]]
name = "sum_base"
path = "src/sum_base.rs"

[[bin]]
name = "sum_oop"
path = "src/sum_oop.rs"

[[bin]]
name = "sum_oop_borrow"
path = "src/sum_oop_borrow.rs"

[[bin]]
name = "try_borrow"
path = "src/try_borrow.rs"

[[bin]]
name = "sum_concurrent"
path = "src/sum_concurrent.rs"

[[bin]]
name = "sum_mutex"
path = "src/sum_mutex.rs"

[[bin]]
name = "sum_queue"
path = "src/sum_queue.rs"
